samples/_failures_safe/1761294848_bf79a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6d851e1.c: In function ‘main’:
./samples/SAFE/__tmp_e6d851e1.c:160:9: error: expected declaration or statement at end of input
  160 |         buffer_free(&decompressed);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_e6d851e1.c:160:9: error: expected declaration or statement at end of input
